tests/baselines/reference/iterableArrayPattern26.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern26.ts(1,33): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/destructuring/iterableArrayPattern26.ts(1,33): error TS2501: A rest element cannot contain a binding pattern.
tests/cases/conformance/es6/destructuring/iterableArrayPattern26.ts(2,21): error TS2345: Argument of type 'Map<文字, 数字>' is not assignable to parameter of type '[文字, 数字]'.
  Property '0' is missing in type 'Map<文字, 数字>'.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern26.ts (3 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]: [string, number][]) { }
                                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
                                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2501: A rest element cannot contain a binding pattern.
    takeFirstTwoEntries(new Map([["", 0], ["hello", 1]]));
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'Map<文字, 数字>' is not assignable to parameter of type '[文字, 数字]'.
!!! error TS2345:   Property '0' is missing in type 'Map<文字, 数字>'.